<resources>
    <string name="app_name">PRUEBAS SABER 11</string>
    <string name="textoAbout">ACERCA DE</string>
    <string name="textoAboutTitulo">SEGUNDO PARCIAL DESARROLLO DE NUEVAS TECNOLOGIAS</string>
    <string name="textoAboutIntegrantes">PRESENTADO POR</string>

    <string name="textoIdentificacion">IDENTIFICACION</string>
    <string name="textoNombreEst">NOMBRE</string>
    <string name="textoApellidoEst">APELLIDO</string>
    <string name="textoColegioEst">COLEGIO</string>
    <string name="textoTColegioEst">TIPO DE COLEGIO</string>
    <string name="textoDepartamentoEst">DEPARTAMENTO</string>
    <string name="textoCiudadEst">CIUDAD</string>
    <string name="textoGuardar">GUARDAR</string>
    <string name="textoMostrar">MOSTRAR</string>
    <string name="textoPuntLecturaCritica">PUNTAJE LECTURA CRITICA</string>
    <string name="textoPuntMatematicas">PUNTAJE MATEMATICAS</string>
    <string name="textoPuntSociales">PUNTAJE SOCIALES Y CIUDADANA</string>
    <string name="textoPuntNaturales">PUNTAJE CIENCIAS NATURALES</string>
    <string name="textoPuntIngles">PUNTAJE INGLES</string>
    <string name="textoActualizar">ACTUALIZAR</string>
    <string name="textoBorrar">BORRAR</string>
    <string name="textoEstudianteSeleccionado">ESTUDIANTE SELECCIONADO</string>
    <string name="textoActualizacion">ACTUALIZACION DE DATOS</string>
    <string name="textoActColegio">COLEGIO ACTUAL</string>
    <string name="textoPuntaje">PUNTAJE</string>
    <string name="textoId">ID</string>



    <string-array name="textoTiposColegio">
        <item>PRIVADO</item>
        <item>PUBLICO</item>
    </string-array>

    <string-array name="arrayPuntajes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>


</resources>
