<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtIdentificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textoIdentificacion"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textoNombreEst"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textoApellidoEst"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtDepartamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textoDepartamentoEst"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textoCiudadEst"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtColegio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textoColegioEst"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ecedeb"
            android:gravity="center_horizontal|center"
            android:text="@string/textoTColegioEst"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <Spinner
            android:id="@+id/spinnerTipoColegio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ecedeb"
            android:gravity="center_horizontal|center"
            android:text="@string/textoPuntLecturaCritica"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerLCritica"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ecedeb"
            android:gravity="center_horizontal|center"
            android:text="@string/textoPuntMatematicas"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerMatematicas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ecedeb"
            android:gravity="center_horizontal|center"
            android:text="@string/textoPuntSociales"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerSociales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ecedeb"
            android:gravity="center_horizontal|center"
            android:text="@string/textoPuntNaturales"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerNaturales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ecedeb"
            android:gravity="center_horizontal|center"
            android:text="@string/textoPuntIngles"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerIngles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textoGuardar" />

        <Button
            android:id="@+id/btnMostrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textoMostrar" />

    </LinearLayout>
</ScrollView>