<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actualizar">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9DD4FF"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/textoActualizacion"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-------------------------------------------------------------------"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTvActId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9DD4FF"
            android:gravity="center_vertical|center_horizontal"
            android:text="TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtTvActNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9DD4FF"
            android:gravity="center_vertical|center_horizontal"
            android:text="TextView"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtActColegio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textoActColegio"
            android:inputType="textPersonName"
            android:textColor="#FB4F79" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9DD4FF"
            android:gravity="center_horizontal|center"
            android:text="@string/textoTColegioEst"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerActTcolegio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txtActDep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textoDepartamentoEst"
            android:inputType="textPersonName"
            android:textColor="#FB4F79" />

        <EditText
            android:id="@+id/txtActCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textoCiudadEst"
            android:inputType="textPersonName"
            android:textColor="#FB4F79" />


        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9DD4FF"
            android:gravity="center_horizontal|center"
            android:text="@string/textoPuntLecturaCritica"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerActLCritica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9DD4FF"
            android:gravity="center_horizontal|center"
            android:text="@string/textoPuntMatematicas"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerActMat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9DD4FF"
            android:gravity="center_horizontal|center"
            android:text="@string/textoPuntSociales"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerActSoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9DD4FF"
            android:gravity="center_horizontal|center"
            android:text="@string/textoPuntNaturales"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerActNat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9DD4FF"
            android:gravity="center_horizontal|center"
            android:text="@string/textoPuntIngles"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerActIngles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-------------------------------------------------------------------"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnActualizar2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textoActualizar"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>