<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListaEstudiantes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#9DD4FF"
            android:gravity="center"
            android:text="@string/textoId"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#9DD4FF"
            android:gravity="center"
            android:text="@string/textoNombreEst"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#9DD4FF"
            android:gravity="center"
            android:text="@string/textoPuntaje"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listaEstudiante"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>