<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DatosEstudiante">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9DD4FF"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/textoEstudianteSeleccionado"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="-------------------------------------------------------------------"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtViewDatosEstudiante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#FB4F79"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="-------------------------------------------------------------------"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnActualizar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textoActualizar"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnBorrar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textoBorrar"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>